--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -7,7 +7,7 @@
 
 
 h4 {
-    font-size: 14px !important;
+    font-size: 16px !important;
     width: 100%;
     height: 20%;
     text-align: center;
@@ -229,6 +229,7 @@ footer {
     background-color: var(--fondo-logo);
     padding: 30px;
     box-sizing: border-box;
+    position: relative;
 }
 
 footer .social-networks {
@@ -241,7 +242,7 @@ footer .social-networks {
 }
 
 footer .social-networks ul {
-    height: 50%;
+    height: 80%;
     width: 100%;
     list-style: none;
     display: flex;
@@ -277,7 +278,7 @@ footer .credits {
 }
 
 footer .credits ul {
-    height: 100%;
+    height: 80%;
     width: 100%;
     list-style: none;
     display: flex;
@@ -314,7 +315,7 @@ footer .bye-message {
 footer .bye-message ul  {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 80%;
     width: 100%;
     list-style: none;
     align-items: center;
@@ -414,11 +415,11 @@ footer p {
     .container {
         height: auto;
     }
-    h4 {
+    /* h4 {
         font-size: 10px !important;
-    }
+    } */
     footer .social-networks ul,  footer .credits ul, footer .bye-message p{
-        font-size: 10px;
+        font-size: 16px;
     }
     .mensaje-guardado {
         right: -30px;
