--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -7,7 +7,7 @@
 
 
 h4 {
-    font-size: 14px !important;
+    font-size: 16px !important;
     width: 100%;
     height: 20%;
     text-align: center;
@@ -338,6 +338,7 @@ footer {
     background-color: var(--fondo-logo);
     padding: 30px;
     box-sizing: border-box;
+    position: relative;
 }
 
 footer .social-networks {
@@ -350,7 +351,7 @@ footer .social-networks {
 }
 
 footer .social-networks ul {
-    height: 50%;
+    height: 80%;
     width: 100%;
     list-style: none;
     display: flex;
@@ -386,7 +387,7 @@ footer .credits {
 }
 
 footer .credits ul {
-    height: 100%;
+    height: 80%;
     width: 100%;
     list-style: none;
     display: flex;
@@ -423,7 +424,7 @@ footer .bye-message {
 footer .bye-message ul  {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 80%;
     width: 100%;
     list-style: none;
     align-items: center;
@@ -538,9 +539,9 @@ footer p {
     .like-michi {
         font-size: 28px;
     }
-    h4 {
-        font-size: 10px !important;
-    }
+    /* h4 {
+        font-size: 16px !important;
+    } */
     .mensajito p {
         padding: 10px;
         width: 350px;
@@ -562,11 +563,11 @@ footer p {
         display: none;
     }
 
-    footer {
+    /* footer {
         height: 180px;
-    }
+    } */
     footer .social-networks ul,  footer .credits ul, footer .bye-message p{
-        font-size: 10px;
+        font-size: 16px;
     }
     .grid {
         display: grid;
@@ -584,12 +585,12 @@ footer p {
         width: 50px;
         height: 50px;
     }
-    h4 {
-        font-size: 10px !important;
-    }
+    /* h4 {
+        font-size: 16px !important;
+    } */
 
     footer .social-networks ul,  footer .credits ul, footer .bye-message p{
-        font-size: 10px;
+        font-size: 16px;
     }
     
     .container-Favmichis .michi-card {
