--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -377,6 +377,11 @@ footer .social-networks ul li a:hover {
     color: rgb(251, 233, 195);
 }
 
+.social-networks .gmail {
+    width: 42px;
+    height: 42px;
+}
+
 footer .credits {
     width: 33.33%;
     height: 100%;
