--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -694,7 +694,15 @@ footer p {
         width: 250px;
         height: 250px; 
     }
+    footer .social-networks ul li a img {
+        width: 30px;
+        height: 30px;
+    }
 
+    .social-networks .gmail {
+        width: 28px;
+        height: 28px;
+    }
 }
 
 @media (min-width: 376px) and (max-width: 560px) {
