--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -255,7 +255,7 @@ footer .social-networks ul {
     padding: 0;
     font-size: 16px;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 
@@ -427,6 +427,15 @@ footer p {
     }
     footer .social-networks ul,  footer .credits ul, footer .bye-message p{
         font-size: 16px;
+    }
+    footer .social-networks ul li a img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .social-networks .gmail {
+        width: 28px;
+        height: 28px;
     }
     .mensaje-guardado {
         bottom: 10%;
