--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -480,7 +480,7 @@ footer .social-networks ul {
     padding: 0;
     font-size: 16px;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 
