--- a/styles.css
+++ b/styles.css
@@ -499,7 +499,7 @@ footer .social-networks ul {
     padding: 0;
     font-size: 16px;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 
@@ -613,7 +613,15 @@ footer p {
     .like-michi {
         font-size: 28px;
     }
+    footer .social-networks ul li a img {
+        width: 30px;
+        height: 30px;
+    }
 
+    .social-networks .gmail {
+        width: 28px;
+        height: 28px;
+    }
     .mensaje-guardado {
         bottom: 10%;
         right: 50%;
