--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -373,6 +373,7 @@ footer .social-networks ul li a {
 footer .social-networks ul li a:hover {
     color: rgb(251, 233, 195);
 }
+
 .social-networks .gmail {
     width: 42px;
     height: 42px;
@@ -423,7 +424,7 @@ footer .bye-message {
     justify-content: center;
 }
 
-footer .bye-message ul  {
+footer .bye-message ul {
     display: flex;
     flex-direction: column;
     height: 80%;
@@ -432,6 +433,7 @@ footer .bye-message ul  {
     align-items: center;
     padding: 0;
 }
+
 footer .bye-message ul li {
     height: 25%;
 }
@@ -463,6 +465,7 @@ footer p {
         transform: translate(50%, -50%);
         height: auto;
     }
+
     footer .social-networks ul li a img {
         width: 30px;
         height: 30px;
@@ -473,9 +476,12 @@ footer p {
         height: 28px;
     }
 
-    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+    footer .social-networks ul,
+    footer .credits ul,
+    footer .bye-message p {
         font-size: 16px;
     }
+
     .menu-desktop {
         display: none;
     }
@@ -497,16 +503,20 @@ footer p {
         width: 180px;
         height: 180px;
     }
+
     .mensaje-guardado {
         bottom: 10%;
         right: 50%;
         transform: translate(50%, -50%);
         height: auto;
     }
-    
-    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+
+    footer .social-networks ul,
+    footer .credits ul,
+    footer .bye-message p {
         font-size: 16px;
     }
+
     .menu-mobile {
         display: none;
     }
@@ -523,18 +533,24 @@ footer p {
     .container {
         height: auto;
     }
-    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+
+    footer .social-networks ul,
+    footer .credits ul,
+    footer .bye-message p {
         font-size: 16px;
     }
+
     .container-michis .michi-card {
         width: 250px;
         height: 250px;
     }
+
     .mensaje-guardado {
         right: -30px;
         height: 142px;
         width: 240px;
     }
+
     .menu-mobile {
         display: none;
     }
