--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -32,7 +32,7 @@ header img {
     width: 100%;
 }
 
-.menu-desktop  {
+.menu-desktop {
     position: relative;
     background-color: var(--fondo-logo);
     display: flex;
@@ -57,7 +57,7 @@ header img {
     object-fit: cover;
 }
 
-.menu-desktop  ul {
+.menu-desktop ul {
     width: 80%;
     height: 100%;
     display: flex;
@@ -69,16 +69,16 @@ header img {
     align-items: center;
 }
 
-.menu-desktop  ul a {
+.menu-desktop ul a {
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
 
-.menu-desktop  ul a:hover {
+.menu-desktop ul a:hover {
     cursor: pointer;
 }
 
-.menu-desktop  ul li {
+.menu-desktop ul li {
     display: flex;
     width: 25%;
     height: 100%;
@@ -87,12 +87,12 @@ header img {
     justify-content: center;
 }
 
-.menu-desktop  ul li:hover {
+.menu-desktop ul li:hover {
     background-color: #fec576;
     border-bottom: 1px #f6b458;
 }
 
-.menu-desktop  ul li:nth-child(4) {
+.menu-desktop ul li:nth-child(4) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
@@ -101,7 +101,7 @@ header img {
 }
 
 
-.menu-mobile  {
+.menu-mobile {
     position: relative;
     background-color: var(--fondo-logo);
     display: flex;
@@ -118,7 +118,7 @@ header img {
     justify-content: flex-start;
 }
 
-.menu-mobile .left-menu img{
+.menu-mobile .left-menu img {
     margin-left: 10px;
     width: 40px;
     height: 50px;
@@ -130,12 +130,13 @@ header img {
     display: flex;
     justify-content: flex-end;
 }
+
 .menu-mobile .right-menu img {
     width: 150px;
     height: 70px;
 }
 
-.menu-mobile  ul {
+.menu-mobile ul {
     width: 80%;
     height: 100%;
     display: flex;
@@ -272,6 +273,7 @@ footer .social-networks ul li a {
 footer .social-networks ul li a:hover {
     color: rgb(251, 233, 195);
 }
+
 .social-networks .gmail {
     width: 42px;
     height: 42px;
@@ -322,7 +324,7 @@ footer .bye-message {
     justify-content: center;
 }
 
-footer .bye-message ul  {
+footer .bye-message ul {
     display: flex;
     flex-direction: column;
     height: 80%;
@@ -331,6 +333,7 @@ footer .bye-message ul  {
     align-items: center;
     padding: 0;
 }
+
 footer .bye-message ul li {
     height: 25%;
 }
@@ -350,6 +353,7 @@ footer p {
     font-size: 12px;
     color: rgb(83, 83, 83);
 }
+
 .more-michis-button button {
     position: relative;
     display: inline-block;
@@ -425,9 +429,13 @@ footer p {
     .container {
         height: auto;
     }
-    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+
+    footer .social-networks ul,
+    footer .credits ul,
+    footer .bye-message p {
         font-size: 16px;
     }
+
     footer .social-networks ul li a img {
         width: 30px;
         height: 30px;
@@ -437,32 +445,36 @@ footer p {
         width: 28px;
         height: 28px;
     }
+
     .mensaje-guardado {
         bottom: 10%;
         right: 50%;
         transform: translate(50%, -50%);
         height: auto;
     }
+
     .menu-desktop {
         display: none;
     }
-    
+
 }
 
-@media (min-width: 561px) and (max-width: 3600px){
+@media (min-width: 561px) and (max-width: 3600px) {
     .container {
         height: auto;
     }
-    
+
     .menu-mobile {
         display: none;
     }
+
     .mensaje-guardado {
         bottom: 10%;
         right: 50%;
         transform: translate(50%, -50%);
         height: auto;
     }
+
     .aside-menu-mobile {
         display: none;
     }
