--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -51,7 +51,7 @@ header img {
     width: 100%;
 }
 
-.menu-desktop  {
+.menu-desktop {
     position: relative;
     background-color: var(--fondo-logo);
     display: flex;
@@ -76,7 +76,7 @@ header img {
     object-fit: cover;
 }
 
-.menu-desktop  ul {
+.menu-desktop ul {
     width: 80%;
     height: 100%;
     display: flex;
@@ -88,16 +88,16 @@ header img {
     align-items: center;
 }
 
-.menu-desktop  ul a {
+.menu-desktop ul a {
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
 
-.menu-desktop  ul a:hover {
+.menu-desktop ul a:hover {
     cursor: pointer;
 }
 
-.menu-desktop  ul li {
+.menu-desktop ul li {
     display: flex;
     width: 25%;
     height: 100%;
@@ -106,12 +106,12 @@ header img {
     justify-content: center;
 }
 
-.menu-desktop  ul li:hover {
+.menu-desktop ul li:hover {
     background-color: #fec576;
     border-bottom: 1px #f6b458;
 }
 
-.menu-desktop  ul li:nth-child(2) {
+.menu-desktop ul li:nth-child(2) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
@@ -119,7 +119,7 @@ header img {
     align-items: center;
 }
 
-.menu-mobile  {
+.menu-mobile {
     position: relative;
     background-color: var(--fondo-logo);
     display: flex;
@@ -136,7 +136,7 @@ header img {
     justify-content: flex-start;
 }
 
-.menu-mobile .left-menu img{
+.menu-mobile .left-menu img {
     margin-left: 10px;
     width: 40px;
     height: 50px;
@@ -148,12 +148,13 @@ header img {
     display: flex;
     justify-content: flex-end;
 }
+
 .menu-mobile .right-menu img {
     width: 150px;
     height: 70px;
 }
 
-.menu-mobile  ul {
+.menu-mobile ul {
     width: 80%;
     height: 100%;
     display: flex;
@@ -260,7 +261,7 @@ header img {
 
 /* Pop up */
 
-.are-you-sure{
+.are-you-sure {
     display: flex;
     flex-direction: column;
     background-color: #EBAD6E;
@@ -285,6 +286,7 @@ header img {
     align-items: center;
 
 }
+
 .botones {
     background-color: #fdd399;
     display: flex;
@@ -389,6 +391,7 @@ header img {
 .mensaje-guardado.mostrar {
     opacity: 1;
 }
+
 /* -- */
 
 /* Aside para ver mejor la imagen de los michis */
@@ -448,6 +451,7 @@ aside .preview-favMichi {
     text-align: center;
     background-color: rgba(240, 248, 255, 0.284);
 }
+
 /* -- */
 
 footer {
@@ -547,7 +551,7 @@ footer .bye-message {
     justify-content: center;
 }
 
-footer .bye-message ul  {
+footer .bye-message ul {
     display: flex;
     flex-direction: column;
     height: 80%;
@@ -556,6 +560,7 @@ footer .bye-message ul  {
     align-items: center;
     padding: 0;
 }
+
 footer .bye-message ul li {
     height: 25%;
 }
@@ -568,12 +573,14 @@ footer .bye-message ul li a {
 footer .bye-message ul li a:hover {
     color: rgb(251, 233, 195);
 }
+
 footer p {
     position: absolute;
     bottom: 0;
     font-size: 12px;
     color: rgb(83, 83, 83);
 }
+
 .more-michis-button {
     display: flex;
     justify-content: center;
@@ -649,10 +656,11 @@ footer p {
     transform: translate3d(0, 0, -1em);
 }
 
-@media (max-width: 375px){
+@media (max-width: 375px) {
     .container {
         height: auto;
     }
+
     .container-Favmichis .michi-card {
         width: 100px;
         height: 100px;
@@ -676,9 +684,11 @@ footer p {
         font-size: 12px;
         text-align: justify;
     }
+
     .mensajito p a {
         margin: 0;
     }
+
     .mensaje-guardado {
         bottom: 10%;
         right: 50%;
@@ -692,8 +702,9 @@ footer p {
 
     aside .preview-favMichi {
         width: 250px;
-        height: 250px; 
+        height: 250px;
     }
+
     footer .social-networks ul li a img {
         width: 30px;
         height: 30px;
@@ -709,14 +720,17 @@ footer p {
     .container {
         height: auto;
     }
+
     .michi-card .like-michi {
         width: 50px;
         height: 50px;
     }
+
     .container-Favmichis .michi-card {
         width: 140px;
         height: 140px;
     }
+
     .like-michi {
         font-size: 28px;
     }
@@ -728,9 +742,11 @@ footer p {
         font-size: 12px;
         text-align: justify;
     }
+
     .mensajito p a {
         margin: 0;
     }
+
     .mensaje-guardado {
         bottom: 10%;
         right: 50%;
@@ -744,12 +760,15 @@ footer p {
 
     aside .preview-favMichi {
         width: 300px;
-        height: 300px; 
+        height: 300px;
     }
 
-    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+    footer .social-networks ul,
+    footer .credits ul,
+    footer .bye-message p {
         font-size: 16px;
     }
+
     .grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -758,29 +777,34 @@ footer p {
     }
 }
 
-@media (min-width: 561px) and (max-width: 768px){
+@media (min-width: 561px) and (max-width: 768px) {
     .container {
         height: auto;
     }
+
     .michi-card .like-michi {
         width: 50px;
         height: 50px;
     }
 
-    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+    footer .social-networks ul,
+    footer .credits ul,
+    footer .bye-message p {
         font-size: 16px;
     }
-    
+
     .container-Favmichis .michi-card {
         width: 170px;
         height: 170px;
     }
+
     .mensaje-guardado {
         bottom: 10%;
         right: 50%;
         transform: translate(50%, -50%);
         height: auto;
     }
+
     .menu-mobile {
         display: none;
     }
@@ -793,15 +817,16 @@ footer p {
     }
 }
 
-@media (min-width: 760px) and (max-width: 1080px){
+@media (min-width: 760px) and (max-width: 1080px) {
     .container {
         height: auto;
     }
-    
+
     .container-michis .michi-card {
         width: 150px;
         height: 150px;
     }
+
     .menu-mobile {
         display: none;
     }
@@ -814,15 +839,16 @@ footer p {
     }
 }
 
-@media (min-width: 1081px){
+@media (min-width: 1081px) {
     .container {
         height: auto;
     }
-    
+
     .container-Favmichis .michi-card {
         width: 250px;
         height: 250px;
     }
+
     .menu-mobile {
         display: none;
     }
