Cambios: pointer y Navbar

--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -70,9 +70,14 @@ header img {
 }
 
 .menu-desktop ul a {
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
+
 
 .menu-desktop ul a:hover {
     cursor: pointer;
