--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -14,7 +14,6 @@ body {
     margin: 0;
 }
 
-
 .hidden {
     display: none !important;
 }
@@ -68,9 +67,14 @@ header img {
 }
 
 .menu-desktop ul a {
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
+
 
 .menu-desktop ul a:hover {
     cursor: pointer;
