--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -89,9 +89,14 @@ header img {
 }
 
 .menu-desktop ul a {
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
+
 
 .menu-desktop ul a:hover {
     cursor: pointer;
@@ -231,6 +236,10 @@ header img {
     padding: 14px;
     width: 100%;
     height: 100%;
+}
+
+.imagen-gatitoFav {
+    cursor: pointer;
 }
 
 .mensajito {
