--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,10 @@ header img {
 }
 
 .menu-desktop ul a {
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
