--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -314,7 +314,32 @@ aside .preview-michi {
     font-size: 20px;
     text-align: center;
     background-color: rgba(240, 248, 255, 0.284);
+    font-size: 20px;
+    transition: transform 0.3s;
 }
+
+.like-preview:hover {
+    transform: scale(1.2);
+}
+
+.like-preview:active {
+    animation: change-text 0.5s forwards;
+}
+
+@keyframes change-text {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
 /* -- */
 
 /* Cajita de michis */
